--- a/Pointer.ipynb
+++ b/Pointer.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4451090816\n",
-      "4451090304\n",
+      "4349297216\n",
+      "4349296768\n",
       "-----\n",
-      "4451090816\n",
-      "4451090816\n",
+      "4349297216\n",
+      "4349297216\n",
       "-----\n",
-      "4451090304\n",
-      "4451090304\n",
+      "4349296768\n",
+      "4349296768\n",
       "{'s': [{'d': 5}, {'d': 5}]}\n"
      ]
     }
@@ -35,15 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4403853648 4403853648\n",
-      "4403853648 4403853680\n"
+      "4301257040 4301257040\n",
+      "4301257040 4301257072\n",
+      "2\n"
      ]
     }
    ],
@@ -52,7 +53,34 @@
     "b = a\n",
     "print(id(a),id(b))\n",
     "b = 3\n",
-    "print(id(a),id(b))"
+    "print(id(a),id(b))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class t():\n",
+    "    def __init__(self,v):\n",
+    "        self.v = v\n",
+    "\n",
+    "a = t(3)\n",
+    "b = a\n",
+    "print(a.v)\n",
+    "b.v = 5\n",
+    "print(a.v)"
    ]
   }
  ],
