--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,7 @@
     }
    ],
    "source": [
+    "#Basic\n",
     "class Node:\n",
     "    def __init__(self,value):\n",
     "        self.value = value\n",
@@ -154,6 +155,78 @@
     "a.printL()\n",
     "a.reverse()\n",
     "a.printL()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LeetCode\n",
+    "class Node:\n",
+    "    def __init__(self,value):\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self,value):\n",
+    "        newNode = Node(value)\n",
+    "        self.head = newNode\n",
+    "        self.tail = newNode\n",
+    "        self.length = 1\n",
+    "    def append(self,value):\n",
+    "        if not self.head:\n",
+    "            self.__init__(value)\n",
+    "            return\n",
+    "        newNode = Node(value)\n",
+    "        self.tail.next = newNode\n",
+    "        self.tail = newNode\n",
+    "        self.length += 1\n",
+    "        return True\n",
+    "    def find_middle_node(self):\n",
+    "        slow = self.head\n",
+    "        fast = self.head\n",
+    "        while fast is not None:\n",
+    "            if fast.next is None:\n",
+    "                break\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "        return slow\n",
+    "    def has_loop(self):\n",
+    "        slow = self.head\n",
+    "        fast = self.head\n",
+    "        while fast is not None:\n",
+    "            if fast.next is None:\n",
+    "                break\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "            if fast == slow:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "my_linked_list = LinkedList(1)\n",
+    "my_linked_list.append(2)\n",
+    "my_linked_list.append(3)\n",
+    "my_linked_list.append(4)\n",
+    "my_linked_list.append(5)\n",
+    "print( my_linked_list.find_middle_node().value)\n",
+    "print( my_linked_list.has_loop())\n",
+    "my_linked_list_2 = LinkedList(1)\n",
+    "my_linked_list_2.append(2)\n",
+    "my_linked_list_2.append(3)\n",
+    "my_linked_list_2.append(4)\n",
+    "print(my_linked_list_2.has_loop() ) # Returns False"
    ]
   }
  ],
